--- a/BSPracaInzynierska/Server/appsettings.json
+++ b/BSPracaInzynierska/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:pracainzynierskabs.database.windows.net,1433;Initial Catalog=PracaInzynierskaBS;Persist Security Info=False;User ID=barsyk000;Password=MyDataBaseBarSyk420;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "credentialsOfYourDatabase"
   },
   "AppSettings": {
     "Token": "JtwPracaInzynierskaBS"
